[tool.poetry]
name = "nationalize-app"
version = "0.1.0"
description = ""
authors = ["Badry2022 <rasha.mohamed@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.1"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
